--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 </head>
 
 <body>
-  <main>
+
+  <!-- header -->
+  <header>
     <div class="nav">
       <div class="nav__item">
         <img class="nav__item--logo" src="/assets/images/logo.svg">
@@ -36,6 +38,13 @@
         </a>
       </div>
     </div>
+  </header>
+  <main>
+
+    <div class="section__1">
+
+    </div>
+
   </main>
 
   <!-- 
