--- a/index.html
+++ b/index.html
@@ -33,26 +33,37 @@
         <img class="nav__item--logo" src="/assets/images/logo.svg">
       </div>
       <div class="nav__item">
-        <a class="nav__item--link">
+        <a class="nav__item--link" href="#">
           Try It Free
         </a>
       </div>
     </div>
   </header>
+
+  <!-- main -->
   <main>
 
-    <div class="section__1">
+    <section class="section__1">
+      <div class="block__1">
+        <h1 class="block__1__1st__heading">
+          Build The Community Your Fans Will Love
+        </h1>
+        <div class="">
+          <p class="block__1__para">
+            Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+            Create connections with your users as you engage in genuine discussion.
+          </p>
+        </div>
+      </div>
 
-    </div>
+    </section>
 
   </main>
 
   <!-- 
 
-  Build The Community Your Fans Will Love
-
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+  
+  
 
   Get Started For Free
 
