--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             Create connections with your users as you engage in genuine discussion.
           </p>
         </div>
+        <a class="btn" href="#">Get Started For Free</a>
       </div>
 
     </section>
@@ -65,7 +66,7 @@
   
   
 
-  Get Started For Free
+  
 
   Grow Together
 
