--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         </div>
         <a class="btn" href="#">Get Started For Free</a>
       </div>
+      <div class="block__2">
+        <img class="block__2__img" src="./assets/images/illustration-mockups.svg" alt="mockups-img">
+      </div>
 
     </section>
 
