--- a/index.html
+++ b/index.html
@@ -28,22 +28,18 @@
 
   <!-- header -->
   <header>
-    <div class="nav">
-      <div class="nav__item">
-        <img class="nav__item--logo" src="/assets/images/logo.svg">
+    <div class="header">
+      <div class="header__item">
+        <img class="header__item--logo" src="/assets/images/logo.svg">
       </div>
-      <div class="nav__item">
-        <a class="nav__item--link" href="#">
+      <div class="header__item">
+        <a class="header__item--link" href="#">
           Try It Free
         </a>
       </div>
     </div>
-  </header>
 
-  <!-- main -->
-  <main>
-
-    <section class="section__1">
+    <div class="div__section__1">
       <div class="block__1">
         <h1 class="block__1__1st__heading">
           Build The Community Your Fans Will Love
@@ -60,6 +56,23 @@
         <img class="block__2__img" src="./assets/images/illustration-mockups.svg" alt="mockups-img">
       </div>
 
+    </div>
+  </header>
+
+  <!-- main -->
+  <main>
+
+
+    <section class="div__section__2">
+      <div class="block__3">
+        <img class="block__3__img" src="../assets/images/illustration-grow-together.svg" alt="photo">
+      </div>
+      <div class="">
+        <h1 class="block__3__heading"> Grow Together</h1>
+        <p class="block__3__para">Generate meaningful discussions with your audience and build a strong, loyal
+          community.
+          Think of the insightful conversations you miss out on with a feedback form. </p>
+      </div>
     </section>
 
   </main>
@@ -71,10 +84,9 @@
 
   
 
-  Grow Together
+ 
 
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
+  
 
   Flowing Conversations
 
