--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
       </div>
     </div>
 
-    <div class="div__section__1">
-      <div class="block__1">
-        <h1 class="block__1__1st__heading">
+    <div class="header__section__1">
+      <div class="header__block__1">
+        <h1 class="header__1st__heading">
           Build The Community Your Fans Will Love
         </h1>
         <div class="">
-          <p class="block__1__para">
+          <p class="header__para">
             Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
             Create connections with your users as you engage in genuine discussion.
           </p>
         </div>
         <a class="btn" href="#">Get Started For Free</a>
       </div>
-      <div class="block__2">
-        <img class="block__2__img" src="./assets/images/illustration-mockups.svg" alt="mockups-img">
+      <div class="header__block__2">
+        <img class="header__img" src="./assets/images/illustration-mockups.svg" alt="mockups-img">
       </div>
 
     </div>
