--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
   <!-- header -->
   <header>
     <div class="header">
-      <div class="header__item">
-        <img class="header__item--logo" src="/assets/images/logo.svg">
+      <div class="header__logo-block">
+        <img class="header__logo" src="/assets/images/logo.svg">
       </div>
-      <div class="header__item">
-        <a class="header__item--link" href="#">
+      <div class="header__link-block">
+        <a class="header__link" href="#">
           Try It Free
         </a>
       </div>
     </div>
 
-    <div class="header__section__1">
-      <div class="header__block__1">
-        <h1 class="header__1st__heading">
+    <div class="header__section-1">
+      <div class="header__block-1">
+        <h1 class="header__1st-heading">
           Build The Community Your Fans Will Love
         </h1>
         <div class="">
@@ -52,7 +52,7 @@
         </div>
         <a class="btn" href="#">Get Started For Free</a>
       </div>
-      <div class="header__block__2">
+      <div class="header__block-2">
         <img class="header__img" src="./assets/images/illustration-mockups.svg" alt="mockups-img">
       </div>
 
@@ -63,13 +63,13 @@
   <main>
 
 
-    <section class="div__section__2">
-      <div class="block__3">
-        <img class="block__3__img" src="../assets/images/illustration-grow-together.svg" alt="photo">
+    <section class="section-1">
+      <div class="secton-1__block-1">
+        <img class="section-1__img" src="../assets/images/illustration-grow-together.svg" alt="photo">
       </div>
       <div class="">
-        <h1 class="block__3__heading"> Grow Together</h1>
-        <p class="block__3__para">Generate meaningful discussions with your audience and build a strong, loyal
+        <h1 class="section-1__heading"> Grow Together</h1>
+        <p class="section-1__para">Generate meaningful discussions with your audience and build a strong, loyal
           community.
           Think of the insightful conversations you miss out on with a feedback form. </p>
       </div>
