--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
     <section class="section-1">
-      <div class="secton-1__block-1">
+      <div class="section-1__block-1">
         <img class="section-1__img" src="../assets/images/illustration-grow-together.svg" alt="photo">
       </div>
       <div class="">
