--- a/index.html
+++ b/index.html
@@ -75,28 +75,39 @@
       </div>
     </section>
 
+    <section class="section-2">
+      <div class="section-2__block-1">
+        <img class="section-2__img" src="../assets/images/illustration-flowing-conversation.svg" alt="photo">
+      </div>
+      <div class="section-2__block-2">
+        <h1 class="section-2__heading">Flowing Conversations</h1>
+        <p class="section-2__para">
+          You wouldn't paginate a conversation in real life, so why do it online? Our threads
+          have just-in-time loading for a more natural flow.
+        </p>
+      </div>
+    </section>
+
+    <section class="section-3">
+      <div class="section-3__block-1">
+        <img class="section-3__img" src="../assets/images/illustration-your-users.svg" alt="photo">
+      </div>
+      <div class="section-3__block-2">
+        <h1 class="section-3__heading"> Your Users</h1>
+        <p class="section-3__para">It takes no time at all to integrate Huddle with your app's authentication
+          solution.
+          This means, once signed in to your app, your users can start chatting immediately.</p>
+      </div>
+    </section>
+
   </main>
 
   <!-- 
 
-  
-  
+
+
 
   
-
- 
-
-  
-
-  Flowing Conversations
-
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
-
-  Your Users
-
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
 
   Ready To Build Your Community?
 
