--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
           This means, once signed in to your app, your users can start chatting immediately.</p>
       </div>
     </section>
+    <section class="section-4">
+      <h1 class="section-4__heading">
+        Ready To Build Your Community?
+      </h1>
+      <section class="section-4__btn">Get Started For Free</section>
+      < </section>
 
   </main>
 
@@ -109,9 +115,9 @@
 
   
 
-  Ready To Build Your Community?
+  
 
-  Get Started For Free
+  
 
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
   incididunt ut labore et dolore magna aliqua
