--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <header>
     <div class="header">
       <div class="header__logo-block">
-        <img class="header__logo" src="/assets/images/logo.svg">
+        <img class="header__logo" src="/assets/images/logo.svg" alt="logo-img">
       </div>
       <div class="header__link-block">
         <a class="header__link" href="#">
@@ -104,10 +104,17 @@
         Ready To Build Your Community?
       </h1>
       <section class="section-4__btn">Get Started For Free</section>
-      < </section>
+    </section>
 
   </main>
-
+  <footer class="footer">
+    <div class="footer__logo-block">
+      <img class="footer__logo" src="../assets/images/logo.svg" alt="logo-img">
+    </div>
+    <div class="footer__loc-block">
+      <img class="footer__location-logo" src="../assets/images/icon-email.svg" alt="location-logo">
+    </div>
+  </footer>
   <!-- 
 
 
