--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
@@ -22,6 +22,7 @@
       color: hsl(228, 45%, 44%);
     }
   </style>
+
 </head>
 
 <body>
@@ -110,35 +111,56 @@
   <footer class="footer">
     <div class="footer__logo-block">
       <img class="footer__logo" src="../assets/images/logo.svg" alt="logo-img">
+
+      <div class="footer__loc-block">
+        <img class="footer__location-logo" src="../assets/images/icon-location.svg" alt="location-logo">
+        <p class="footer__loc-para">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+          incididunt ut labore et dolore magna aliqua
+        </p>
+      </div>
+
+      <div class="footer__contact-block">
+        <img class="footer__contact-logo" src="../assets/images/icon-phone.svg" alt="phone-logo">
+        <p class="footer__contact-para">
+          +1-543-123-4567
+        </p>
+      </div>
+
+      <div class="footer__mail-block">
+        <img class="footer__mail-logo" src="../assets/images/icon-email.svg" alt="mail-logo">
+        <p class="footer__mail-para">example@huddle.com</p>
+      </div>
     </div>
-    <div class="footer__loc-block">
-      <img class="footer__location-logo" src="../assets/images/icon-email.svg" alt="location-logo">
+
+    <div class="footer__nav-1">
+      <ul>
+        <li>About Us</li>
+        <li>What We Do</li>
+        <li>FAQ</li>
+      </ul>
+    </div>
+
+    <div class="footer__nav-2">
+      <ul>
+        <li>Career</li>
+        <li>Blog</li>
+        <li>Contact Us</li>
+      </ul>
+    </div>
+
+    <div class="footer__social-media">
+      <i class=" fa fa-brands fa-facebook"></i>
+
     </div>
   </footer>
+
+
   <!-- 
 
-
-
-
   
-
   
-
   
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-  incididunt ut labore et dolore magna aliqua
-
-  +1-543-123-4567
-  example@huddle.com
-
-  About Us
-  What We Do
-  FAQ
-
-  Career
-  Blog
-  Contact Us
 
   &copy; Copyright 2018 Huddle. All rights reserved.
 
