--- a/index.html
+++ b/index.html
@@ -150,26 +150,22 @@
     </div>
 
     <div class="footer__social-media">
-      <i class=" fa fa-brands fa-facebook"></i>
+      <i class=" fa fa-brands fa-facebook" id="footer__fb-logo"></i>
+      <i class="fa fa-brands fa-twitter" id="footer__twitter-logo"></i>
+      <i class="fa fa-brands fa-instagram" id="footer__insta-logo"></i>
+      <p class="footer_copyright-para">&copy; Copyright 2018 Huddle. All rights reserved.</p>
+    </div>
 
+    <div class="my-name-tag">
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Your Name Here</a>.
+      </p>
     </div>
   </footer>
 
 
-  <!-- 
 
-  
-  
-  
-
-  &copy; Copyright 2018 Huddle. All rights reserved.
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer> -->
 </body>
 
 </html>
