--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
+    .my-name-tag {}
+
     .attribution {
       font-size: 11px;
       text-align: center;
+
     }
 
     .attribution a {
-      color: hsl(228, 45%, 44%);
+      color: hsl(228, 14%, 55%);
     }
   </style>
 
@@ -150,16 +153,18 @@
     </div>
 
     <div class="footer__social-media">
-      <i class=" fa fa-brands fa-facebook" id="footer__fb-logo"></i>
-      <i class="fa fa-brands fa-twitter" id="footer__twitter-logo"></i>
-      <i class="fa fa-brands fa-instagram" id="footer__insta-logo"></i>
+      <div> <i class=" fa fa-brands fa-facebook" id="footer__fb-logo"></i>
+        <i class="fa fa-brands fa-twitter" id="footer__twitter-logo"></i>
+        <i class="fa fa-brands fa-instagram" id="footer__insta-logo"></i>
+      </div>
+
       <p class="footer_copyright-para">&copy; Copyright 2018 Huddle. All rights reserved.</p>
     </div>
 
     <div class="my-name-tag">
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
+        Coded by <a href="https://www.frontendmentor.io/profile/Manish-d-art">Manish-d-art</a>.
       </p>
     </div>
   </footer>
