--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <h1 class="section-4__heading">
         Ready To Build Your Community?
       </h1>
-      <section class="section-4__btn">Get Started For Free</section>
+      <a href="#" class="section-4__link">Get Started For Free</a>
     </section>
 
   </main>
