--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     .attribution a {
       color: hsl(228, 14%, 55%);
     }
+
+    .attribution a:hover {
+      color: hsl(322, 100%, 66%);
+
+    }
   </style>
 
 </head>
