--- a/index.html
+++ b/index.html
@@ -114,55 +114,57 @@
 
   </main>
   <footer class="footer">
-    <div class="footer__logo-block">
-      <img class="footer__logo" src="../assets/images/logo.svg" alt="logo-img">
+    <img class="footer__logo" src="../assets/images/logo.svg" alt="logo-img">
 
-      <div class="footer__loc-block">
-        <img class="footer__location-logo" src="../assets/images/icon-location.svg" alt="location-logo">
-        <p class="footer__loc-para">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua
-        </p>
+    <div class="footer__section">
+      <div class="footer__logo-block">
+
+        <div class="footer__loc-block">
+          <img class="footer__location-logo" src="../assets/images/icon-location.svg" alt="location-logo">
+          <p class="footer__loc-para">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua
+          </p>
+        </div>
+
+        <div class="footer__contact-block">
+          <img class="footer__contact-logo" src="../assets/images/icon-phone.svg" alt="phone-logo">
+          <p class="footer__contact-para">
+            +1-543-123-4567
+          </p>
+        </div>
+
+        <div class="footer__mail-block">
+          <img class="footer__mail-logo" src="../assets/images/icon-email.svg" alt="mail-logo">
+          <p class="footer__mail-para">example@huddle.com</p>
+        </div>
       </div>
 
-      <div class="footer__contact-block">
-        <img class="footer__contact-logo" src="../assets/images/icon-phone.svg" alt="phone-logo">
-        <p class="footer__contact-para">
-          +1-543-123-4567
-        </p>
+      <div class="footer__nav-1">
+        <ul>
+          <li>About Us</li>
+          <li>What We Do</li>
+          <li>FAQ</li>
+        </ul>
       </div>
 
-      <div class="footer__mail-block">
-        <img class="footer__mail-logo" src="../assets/images/icon-email.svg" alt="mail-logo">
-        <p class="footer__mail-para">example@huddle.com</p>
-      </div>
-    </div>
-
-    <div class="footer__nav-1">
-      <ul>
-        <li>About Us</li>
-        <li>What We Do</li>
-        <li>FAQ</li>
-      </ul>
-    </div>
-
-    <div class="footer__nav-2">
-      <ul>
-        <li>Career</li>
-        <li>Blog</li>
-        <li>Contact Us</li>
-      </ul>
-    </div>
-
-    <div class="footer__social-media">
-      <div> <i class=" fa fa-brands fa-facebook" id="footer__fb-logo"></i>
-        <i class="fa fa-brands fa-twitter" id="footer__twitter-logo"></i>
-        <i class="fa fa-brands fa-instagram" id="footer__insta-logo"></i>
+      <div class="footer__nav-2">
+        <ul>
+          <li>Career</li>
+          <li>Blog</li>
+          <li>Contact Us</li>
+        </ul>
       </div>
 
-      <p class="footer_copyright-para">&copy; Copyright 2018 Huddle. All rights reserved.</p>
-    </div>
+      <div class="footer__social-media">
+        <div> <i class=" fa fa-brands fa-facebook" id="footer__fb-logo"></i>
+          <i class="fa fa-brands fa-twitter" id="footer__twitter-logo"></i>
+          <i class="fa fa-brands fa-instagram" id="footer__insta-logo"></i>
+        </div>
 
+        <p class="footer_copyright-para">&copy; Copyright 2018 Huddle. All rights reserved.</p>
+      </div>
+    </div>
     <div class="my-name-tag">
       <p class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
