--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="section-1__block-1">
         <img class="section-1__img" src="../assets/images/illustration-grow-together.svg" alt="photo">
       </div>
-      <div class="">
+      <div class="section-1__block-2">
         <h1 class="section-1__heading"> Grow Together</h1>
         <p class="section-1__para">Generate meaningful discussions with your audience and build a strong, loyal
           community.
